# beams-bin-packer

./: Cargo.toml  README.md  beams.rs  example_beams.txt  example_offcuts.txt
src/: beams.rs
